Fix align

--- a/src/sass/layout/_item-container.scss
+++ b/src/sass/layout/_item-container.scss
@@ -67,6 +67,7 @@ a.tui-page-btn.tui-first{
 
 .tui-pagination {
   display: flex;
+  align-self: center;
   gap: 5px;
   height: 40px;
   margin: 40px 0 40px;
